@@ -21,7 +21,6 @@ import org.apache.kafka.common.utils.LogContext;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.OptionalInt;
 import java.util.Set;
@@ -48,19 +47,18 @@ public class CopartitionedTopicsEnforcerTest {
     }
 
     @Test
-    public void shouldThrowTopicConfigurationExceptionIfNoPartitionsFoundForCoPartitionedTopic() {
-        final Map<String, Integer> topicPartitionCounts = Collections.emptyMap();
+    public void shouldThrowIllegalStateExceptionIfNoPartitionsFoundForCoPartitionedTopic() {
+        final Map<String, Integer> topicPartitionCounts = Map.of();
         final CopartitionedTopicsEnforcer enforcer =
             new CopartitionedTopicsEnforcer(LOG_CONTEXT, topicPartitionProvider(topicPartitionCounts));
 
-        final TopicConfigurationException ex = assertThrows(TopicConfigurationException.class, () ->
+        final IllegalStateException ex = assertThrows(IllegalStateException.class, () ->
             enforcer.enforce(
                 Set.of(SOURCE_TOPIC_1),
                 Set.of(),
                 Set.of()
             ));
-        assertEquals(Status.MISSING_SOURCE_TOPICS, ex.status());
-        assertEquals(String.format("Following topics are missing: [%s]", SOURCE_TOPIC_1), ex.getMessage());
+        assertEquals(String.format("Number of partitions is not set for topic: %s", SOURCE_TOPIC_1), ex.getMessage());
     }
 
     @Test
